# career-workflow

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  OLD_RDME.md  README.md  README_original.md  analyze_run.py  application_report.py  apply_agent.py  apply_agent_backup.py  apply_jobs.py  apply_jobs_backup.py  apply_jobs_v1.py  apply_jobs_v2.py  audit_acquisition.py  audit_run.py  audit_ui.py  career_workflow_acquisition_v3.tgz  collect_jobs.py  create_configs.py  fix_apply_agent.py  fix_pipeline.py  fix_yamls.py  inspect_questionnaire.py  inspect_scoring.py  inspect_unknown_responses.py  main.py  modify_classifier.py  modify_classifier2.py  monitor_applications.py  pyproject.toml  replay_run.py  requirements.txt  run_nicegui.py  run_pipeline.py  run_scheduler.py  score_jobs.py  score_jobs_v1.py  test_acquisition.py  (+31 more)
.streamlit/: config.toml
api/: main.py  routes.py  schemas.py
backup_before_ai_broad_coverage_patch/: apply_agent.py  jop_classifier.py  test_apply_agent_flow.py  test_jop_classifier_regression.py
career_ui/: app.py  config.py  shell.py  theme.py
career_ui_legacy/: __init__.py  app.py  config.py  shell.py
config/: README.md  candidate_evidence.py  candidate_profile.py  company_targets.yaml  provider_groups.yaml  search_strategy.yaml  user_profile.yaml
control_center/: analytics_helpers.py  app.py  components.py  data.py  diagnostics.py  export.py  manual_jobs.py  process_wrapper.py  review_state.py  run_inspector.py  runner.py  runtime_status.py  theme.py  workflows.py
data/: analysis.txt  application_log.backup.csv  application_log.csv  (+4 more)
(+347 files in other folders)
