[project]
name = "career-workflow"
version = "1.0.0-rc1"
description = "Policy-Driven AI Job Discovery, Qualification, and Application Orchestration Engine"

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I"]

ignore = [
    "F403",
    "F405",
]
[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]